--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
+		<!-- 보안 문제 있음. 배포시 삭제 필요 -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
