회원가입 부분 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@
 server.servlet.context-path=/api
 
 # MyBatis
-mybatis.type-aliases-package=com.soso.login.repository.itf
+mybatis.type-aliases-package=com.soso.login.repository.itf, com.soso.login.dto
 mybatis.mapper-locations=mapper/*.xml
