--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ server.servlet.context-path=/api
 mybatis.type-aliases-package=com.soso.login.repository.itf, com.soso.login.dto,\
                             \ com.soso.domain.repository.itf, com.soso.domain.dto
 mybatis.mapper-locations=mapper/*.xml
+
+# Log
+logging.config=classpath:logback.xml
