--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ server.servlet.context-path=/api
 
 # MyBatis
 mybatis.type-aliases-package=com.soso.login.repository.itf, com.soso.login.dto,\
-                            \ com.soso.domain.repository.itf, com.soso.domain.dto
+                           \ com.soso.domain.repository.itf, com.soso.domain.dto,\
+                             com.soso.file.repository.itf, com.soso.file.dto,
 mybatis.mapper-locations=mapper/*.xml
 
 # Log
